--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -21,7 +21,8 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: grey">
+  <!-- <body style="background-color: grey"> -->
+    <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
