--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -9,6 +9,10 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+
+    <!-- script for stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -21,7 +25,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: grey">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
