--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <title>FSCinema</title>
   </head>
-  <body style="background-color: grey">
+  <body style="background-color: whitesmoke">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
